# pyplot-localizer

./: README.md  pyproject.toml
doc/: preset-test.ipynb
matplotlib_japreset/: core.py  mplj_cairo.py  mplj_pdf.py  mplj_pgf.py  plotnine.py  search.py  setter.py  utils.py
matplotlib_japreset/core/: fonts.py  presets.py  search.py  typing.py
matplotlib_japreset/loader/: preset_cairo.py  preset_pdf.py  preset_pgf.py
plot_localizer/: pandas.py  plotnine.py  seaborn.py  setter.py
plot_localizer/core/: fonts.py  presets.py  search.py  updater.py
plot_localizer/loader/: preset_cairo.py  preset_pgf.py
plot_localizer/matplotlib/: pyplot.py
